# web_glitz.rs

./: .gitignore  Cargo.toml  README.md
examples/: test.html
examples/0_triangle/: Cargo.toml  README.md  index.js  webpack.config.js
examples/0_triangle/src/: lib.rs  main.rs  vertex.glsl
examples/1_uniform_block/: Cargo.toml  README.md  index.html  index.js
examples/1_uniform_block/src/: fragment.glsl  lib.rs  vertex.glsl
examples/2_textured_triangle/: Cargo.toml  README.md  index.html  index.js
examples/2_textured_triangle/src/: lib.rs  vertex.glsl
examples/3_render_to_texture/: Cargo.toml  README.md  index.js
examples/3_render_to_texture/src/: lib.rs  primary_fragment.glsl
examples/4_blit/: Cargo.toml  README.md  index.js
examples/4_blit/src/: lib.rs
examples/5_transform_feedback/: Cargo.toml  README.md  index.js
examples/5_transform_feedback/src/: lib.rs  vertex.glsl
examples/6_cube_3d/: Cargo.toml
examples/6_cube_3d/src/: lib.rs
examples/7_cube_3d_animated/: Cargo.toml
examples/7_cube_3d_animated/src/: lib.rs  vertex.glsl
examples/8_resolve/: Cargo.toml  README.md
examples/8_resolve/src/: lib.rs
examples/uniforms/: Cargo.toml
examples/uniforms/src/: main.rs
src/: buffer.rs  lib.rs  pipeline.rs  rendering_context.rs  uniforms.rs  util.rs  vertex_input_binding.rs  vertex_stream.rs
src/command/: and.rs  and_then.rs  empty.rs  gpu_command.rs  join.rs  map.rs  map_err.rs  mod.rs  or.rs  or_else.rs  then.rs
src/core/: buffer.rs  gpu_command.rs  mod.rs  rendering_context.rs  texture.rs  uniforms.rs  vertex_stream.rs
src/core/pipeline/: pipeline_state.rs  program.rs  test_function.rs
src/core/render_pass/: draw_command.rs
src/task/: and_then.rs  empty.rs  gpu_task.rs  join.rs  map.rs  map_err.rs  maybe_done.rs  mod.rs  or_else.rs  sequence.rs  then.rs
web_glitz/: Cargo.toml
web_glitz/src/: buffer.rs  framebuffer.rs  image_format.rs  image_region.rs  lib.rs  program.rs  renderbuffer.rs  rendering_context.rs  sampler.rs  std140.rs  std_140.rs  texture.rs  texture_old.rs  uniform.rs  uniforms.rs  util.rs  vertex_input_binding_old.rs  webgl_2_rendering_context.rs
web_glitz/src/core/: base_rendering_context.rs  gpu_command.rs  mod.rs  scribles.rs
web_glitz/src/core/pipeline/: pipeline_state.rs  program_draft.rs
web_glitz/src/core/render_pass/: mod.rs
web_glitz/src/extensions/: color_buffer_float.rs  mod.rs  texture_float_linear.rs
web_glitz/src/framebuffer/: framebuffer_descriptor.rs  framebuffer_descriptor_builder.rs  framebuffer_handle.rs  mod.rs  render_pass.rs
web_glitz/src/image/: format.rs  image_source.rs  mod.rs  renderbuffer.rs  sampler.rs  texture_2d.rs  texture_2d_array.rs  texture_3d.rs  texture_cube.rs  texture_object_dropper.rs  util.rs
web_glitz/src/pipeline/: graphics_pipeline.rs  interface_block.rs  mod.rs  programmable_stage.rs  rasterizer.rs  reflection.rs  resources.rs
web_glitz/src/pipeline/graphics/: blend.rs  blending.rs  builder.rs  descriptor.rs  fragment_test.rs  graphics_pipeline.rs  input_attribute_layout.rs  line_width.rs  mod.rs  primitive_assembly.rs  rasterize.rs  shader.rs  transform_feedback.rs  util.rs  viewport.rs
web_glitz/src/pipeline/graphics/transform_feedback/: layout_descriptor.rs  mod.rs  transform_feedback_buffers.rs
web_glitz/src/pipeline/graphics/vertex/: attribute_format.rs  attribute_layout.rs  index_buffer.rs  layout_descriptor.rs  mod.rs  vertex_buffers.rs
web_glitz/src/pipeline/graphics/vertex_input/: attribute_format.rs  input_attribute_layout.rs  mod.rs  vertex.rs  vertex_array.rs  vertex_buffer_descriptor.rs
web_glitz/src/pipeline/resources/: bind_group_encoding.rs  binding.rs  mod.rs  resource_bindings_encoding.rs  resource_slot.rs  resources.rs  test.rs
web_glitz/src/pipeline_old/: rasterizer.rs  stencil_test.rs
web_glitz/src/render_pass/: framebuffer.rs  mod.rs  render_pass.rs  single_pass_render_pass.rs
web_glitz/src/render_target/: attachable_image_ref.rs  default_render_target.rs  mod.rs  render_target.rs  render_target_attachment.rs  render_target_description.rs  render_target_encoding.rs
web_glitz/src/rendering/: attachment.rs  default_multisample_render_target.rs  default_render_target.rs  encode_color_buffer.rs  encode_depth_stencil_buffer.rs  framebuffer.rs  load_op.rs  mod.rs  render_pass.rs  render_target.rs  store_op.rs
web_glitz/src/runtime/: context_options.rs  dropper.rs  dynamic_state.rs  executor_job.rs  fenced.rs  framebuffer_cache.rs  index_lru.rs  mod.rs  rendering_context.rs  single_threaded.rs  single_threaded_context.rs  state.rs  supported_samples.rs
web_glitz/src/task/: and_then.rs  empty.rs  gpu_task.rs  join.rs  join_all.rs  map.rs  map_err.rs  map_ok.rs  maybe_done.rs  mod.rs  option_task.rs  or_else.rs  progress.rs  sequence.rs  then.rs  try_gpu_task.rs  try_join.rs  try_maybe_done.rs  try_sequence.rs
web_glitz/src/texture/: mod.rs  texture_2d.rs  texture_2d_array.rs  texture_3d.rs  texture_cube.rs  texture_format.rs  util.rs
web_glitz/src/uniform/: binding.rs  identifier.rs  mod.rs  uniform.rs  uniform_block_slot.rs  uniform_identifier.rs  uniform_value_slot.rs
web_glitz/src/vertex/: attribute_format.rs  index_buffer_description.rs  mod.rs  vertex_array.rs  vertex_attribute_layout.rs  vertex_input_state_description.rs  vertex_stream_description.rs
web_glitz/src/vertex_input/: vertex.rs
web_glitz/src/vertex_input_binding/: mod.rs  vertex.rs  vertex_buffer_descriptor.rs
web_glitz_derive/: Cargo.toml
web_glitz_derive/src/: lib.rs  uniforms_impl.rs  util.rs  vertex.rs
web_glitz_derive/tests/: vertex_macro_derive_test.rs
web_glitz_macros/: Cargo.toml  README.md
web_glitz_macros/src/: interface_block.rs  interface_block_component.rs  lib.rs  repr_std140.rs  resources.rs  transform_feedback.rs  uniforms_impl.rs  vertex.rs
web_glitz_test/: Cargo.toml
web_glitz_test/tests/: compile_test.rs  vertex_macro_derive_test.rs
web_glitz_test/tests/compile-fail/: uniforms_invalid_type.rs  vertex_attribute_invalid_format_override.rs  vertex_attribute_invalid_type.rs  vertex_attribute_no_location.rs
