[package]
name = "web-draw-2"
version = "0.1.0"
authors = ["Roland <roland0507@gmail.com>"]

[dependencies]
#phf = "0.7.22"
#phf_macros = "0.7.22"
failure = "0.1.3"
futures = "0.1.25"
wasm-bindgen = "0.2.23"

[dependencies.web-sys]
version = "0.3.0"
features = [
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlFramebuffer",
    "WebGlProgram",
    "WebGlRenderbuffer",
    "WebGlSampler",
    "WebGlSync",
    "WebGlTexture",
    "WebGlVertexArrayObject",
    "Window"
]
