[workspace]
members = [
    "web_glitz",
    "web_glitz_macros",
    "web_glitz_test",
    "examples/0_triangle",
    "examples/1_uniform_block",
    "examples/2_textured_triangle",
    "examples/3_render_to_texture",
    "examples/4_blit",
    "examples/5_transform_feedback",
    "examples/6_cube_3d"
]
