[package]
name = "web-glitz"
version = "0.2.2"
description = "Rusty low-level web-graphics library on top of WebGL 2.0."
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2018"
repository = "https://github.com/RSSchermer/web_glitz.rs"
homepage = "https://github.com/RSSchermer/web_glitz.rs"
license = "MIT"
readme = "../README.md"

[dependencies]
bitflags = "1.2.1"
fnv = "1.0.7"
futures = "0.3.5"
js-sys = "0.3.45"
serde = "1.0"
serde_derive = "1.0"
staticvec = "0.10.5"
std140 = "0.2.2"
proc-macro-hack = "0.5"
web-glitz-macros = "0.2.0"

[dependencies.memoffset]
version = "0.5.6"
features = ["unstable_const"]

[dependencies.wasm-bindgen]
version = "0.2.68"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.45"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "ImageData",
    "WebGl2RenderingContext",
    "WebGlActiveInfo",
    "WebGlBuffer",
    "WebGlFramebuffer",
    "WebGlProgram",
    "WebGlRenderbuffer",
    "WebGlSampler",
    "WebGlShader",
    "WebGlSync",
    "WebGlTexture",
    "WebGlTransformFeedback",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
    "Window",
    "console"
]

[dev-dependencies]
wasm-bindgen-futures = "0.4.18"
