[package]
name = "web-glitz-macros"
version = "0.1.0"
description = "Procedural macros for the web-glitz crate."
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2018"
homepage = "https://github.com/RSSchermer/weg_glitz.rs"
repository = "https://github.com/RSSchermer/weg_glitz.rs"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
fnv = "1.0.3"
proc-macro2 = "0.4"
proc-macro-hack = "0.5"
quote = "0.6"

[dependencies.syn]
version = "0.15.29"
features = [
    "parsing"
]
