[package]
name = "web-glitz-macros"
version = "0.1.0"
description = "Procedural macros for the web-glitz crate."
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2018"
homepage = "https://github.com/RSSchermer/weg_glitz.rs"
repository = "https://github.com/RSSchermer/weg_glitz.rs"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.5"
quote = "1.0.2"

[dependencies.syn]
version = "1.0.5"
features = [
    "full"
]
