[package]
name = "web-glitz-derive-test"
version = "0.1.0"
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2018"
publish = false
repository = "https://github.com/RSSchermer/weg_glitz.rs"
license = "MIT"

[dev-dependencies]
compiletest_rs = "0.3.22"
web-glitz = { path = "../web_glitz" }
