[package]
name = "1_uniform_block"
version = "0.1.0"
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.40"
web-glitz = { version = "0.1.0", path = "../../web_glitz" }

[dependencies.web-sys]
version = "0.3.10"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
