[package]
name = "1_uniform_block"
version = "0.1.0"
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
std140 = "0.2.0"
wasm-bindgen = "0.2.59"
web-glitz = { version = "0.1.0", path = "../../web_glitz" }

[dependencies.web-sys]
version = "0.3.36"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
