[package]
name = "example-1-uniform-block"
version = "0.1.0"
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
std140 = "0.2.2"
wasm-bindgen = "0.2.74"
web-glitz = { version = "0.2.2", path = "../../web_glitz" }

[dependencies.web-sys]
version = "0.3.51"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
