[package]
name = "2_textured_triangle"
version = "0.1.0"
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.47"
web-glitz = { version = "0.1.0", path = "../../web_glitz" }
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.24"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'ImageData',
  'Window',
]
