[package]
name = "2_textured_triangle"
version = "0.1.0"
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.59"
web-glitz = { version = "0.1.0", path = "../../web_glitz" }

[dependencies.web-sys]
version = "0.3.36"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
