[package]
name = "example-3-render-to-texture"
version = "0.1.0"
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.5"
wasm-bindgen = "0.2.67"
wasm-bindgen-futures = "0.4.17"
web-glitz = { version = "0.2.0", path = "../../web_glitz" }

[dependencies.web-sys]
version = "0.3.44"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
