[package]
name = "5_transform_feedback"
version = "0.1.0"
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
futures-preview = { version = "=0.3.0-alpha.17", features = ["compat"] }
std140 = "0.2.0"
wasm-bindgen = "0.2.48"
web-glitz = { version = "0.1.0", path = "../../web_glitz" }

[dependencies.web-sys]
version = "0.3.25"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
