[package]
name = "example-5-transform-feedback"
version = "0.1.0"
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.15"
std140 = "0.2.2"
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.24"
web-glitz = { version = "0.2.3", path = "../../web_glitz" }

[dependencies.web-sys]
version = "0.3.51"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
