[package]
name = "0_cube_3d"
version = "0.1.0"
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cgmath = "0.17.0"
cgmath-std140 = "0.2.0"
std140 = "0.1.2"
wasm-bindgen = "0.2.48"
web-glitz = { version = "0.1.1", path = "../../web_glitz" }
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.25"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
