[package]
name = "example-7-cube-3d-animated"
version = "0.1.0"
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
arwa = "0.1.1"
cgmath = "0.17.0"
cgmath-std140 = "0.2.1"
futures = "0.3.5"
std140 = "0.2.2"
wasm-bindgen = "0.2.67"
wasm-bindgen-futures = "0.4.17"
web-glitz = { version = "0.2.2", path = "../../web_glitz" }

[dependencies.web-sys]
version = "0.3.44"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
