[package]
name = "example-7-cube-3d-animated"
version = "0.1.0"
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
arwa = "0.1.1"
cgmath = "0.18.0"
cgmath-std140 = "0.2.2"
futures = "0.3.15"
std140 = "0.2.2"
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.24"
web-glitz = { version = "0.2.2", path = "../../web_glitz" }

[dependencies.web-sys]
version = "0.3.51"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
